--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li>
                 Here are some solutions to exercises in various textbooks/other places:
                 <ul>
-                    <li><a href="./solutions/hartshorne/index.html"><i>Algebraic Geometry</i> by Hartshorne</a></li>
+                    <li><a href="./solutions/pdf/hartshorne.pdf"><i>Algebraic Geometry</i> by Hartshorne</a></li>
                     <li><a href="#"><i>Introduction to Symplectic Topology</i> by McDuff and Salamon</a></li>
                 </ul>
             </li>
