--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>About</h2>
         <img src="./jack.jpeg", style="width:200px;float:right;margin-left:10px;">
         <p>
-            In the Fall of 2025, I will be starting my PhD at the University of Chicago. Prior to this, I was an undergraduate student at the University of Toronto.
+            I am a first-year PhD student at the University of Chicago. Prior to this, I was an undergraduate student at the University of Toronto.
             <br><br>
             My research interests are (very broadly) related to differential and algebraic topology/geometry and mathematical physics. Much of my undergraduate
             research was in quantum algorithms and quantum information, but this is no longer my main focus.
@@ -39,7 +39,9 @@
             <li>
                 Here is a list of notes I have written for school/talks/learning/fun:
                 <ul>
-                    <li><a href="./notes/soul_conjecture.pdf">Perelman's proof of the Soul Conjecture</a>, final project for MAT464 (Riemannian geometry) at the University of Toronto</li>
+                    <li><a href="./notes/pdf/derived.pdf">Introduction to derived functors and derived categories</a></li>
+                    <li><a href="./notes/pdf/generalized_elements.pdf">Diagram chasing via generalized elements in Abelian categories</a></li>
+                    <li><a href="./notes/pdf/soul_conjecture.pdf">Perelman's proof of the Soul Conjecture</a>, final project for MAT464 (Riemannian geometry) at the University of Toronto</li>
                 </ul>
             </li>
             <li>
@@ -55,7 +57,7 @@
             <li> I sometimes write stuff online...read at your own peril. <a href="https://jackceroni.substack.com/">Dark Star (Substack)</a></li>
                 <li>I used to work at <a href="https://xanadu.ai">Xanadu</a>, as well as <a href="https://extropic.ai">Extropic</a>. 
                 Both companies are very cool and have done a lot for me. Check them out!</li>
-            <li>My super secret <a href="https://x.com/jack_ceroni">Twitter</a></li>
+                <li>A few artists who inspire me and my work: Edward Hopper, Björk, Yasujirō Ozu, Jonathan Franzen</li>
         </ul>
     </body>
     <style>
