--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             <li>
                 Here is a list of notes I have written for school/talks/learning/fun:
                 <ul>
-                    <li><a href="./notes/pdf/derived.pdf">Introduction to derived functors and derived categories</a></li>
-                    <li><a href="./notes/pdf/generalized_elements.pdf">Diagram chasing via generalized elements in Abelian categories</a></li>
+                    <li><a href="./notes/pdf/derived.pdf">An introduction to derived functors</a></li>
                     <li><a href="./notes/pdf/soul_conjecture.pdf">Perelman's proof of the Soul Conjecture</a>, final project for MAT464 (Riemannian geometry) at the University of Toronto</li>
                 </ul>
             </li>
