--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li> I sometimes write stuff online...read at your own peril. <a href="https://jackceroni.substack.com/">Dark Star (Substack)</a></li>
                 <li>I used to work at <a href="https://xanadu.ai">Xanadu</a>, as well as <a href="https://extropic.ai">Extropic</a>. 
                 Both companies are very cool and have done a lot for me. Check them out!</li>
-                <li>A few artists who inspire me and my work: Edward Hopper, Björk, Yasujirō Ozu, Jonathan Franzen</li>
+                <li>A few artists who inspire me: Edward Hopper, Björk, Yasujirō Ozu, Jonathan Franzen</li>
         </ul>
     </body>
     <style>
