--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
         <h1>Jack Ceroni's Home Page</h1>
         <hr>
         <h2>About</h2>
-        <img src="./jack.jpeg", style="width:200px;float:right;margin-left:10px;">
+        <img src="./jack3.png", style="width:200px;float:right;margin-left:10px;">
         <p>
-            I am a first-year PhD student at the University of Chicago. Prior to this, I was an undergraduate student at the University of Toronto.
-            <br><br>
-            My research interests are (very broadly) related to differential and algebraic topology/geometry and mathematical physics. Much of my undergraduate
-            research was in quantum algorithms and quantum information, but this is no longer my main focus.
+            I am a first-year PhD student at the University of Chicago. Prior to this, I was an 
+            undergraduate student at the University of Toronto. I also worked as a research intern at <a href="https://xanadu.ai">Xanadu</a> and a 
+            research scientist at <a href="https:/extropic.ai">Extropic</a>. My current research interests are mostly related to 
+            geometric analysis and its interactions with topology. I am also interested in several more 
+            applied fields, such as probability and mathematical methods for finance, quantum information, and quantum chemistry.
             <br>
             <p>Send me an email, if you want: <a href="MAILTO:jceroni@uchicago.edu">jceroni@uchicago.edu</a> | <a href="https://mathematics.uchicago.edu/people/profile/jack-luca-ceroni/">UChicago math department page</a></p>
         </p>
-        <h2>Papers</h2>
+        <h2>Selected Papers</h2>
         <ul>
             <li><b>Non-Markov quantum belief propagation</b> (with Ian MacCormack and Guillaume Verdon) <a href="https://journals.aps.org/pra/abstract/10.1103/PhysRevA.110.012435">Phys. Rev. A 110, 012435</a></li> 
             <li><b>Modular quantum signal processing in many variables</b> (with Zane Rossi and Isaac Chuang) <a href="https://quantum-journal.org/papers/q-2025-06-18-1776/"> Quantum 9, 1776</a></li>
@@ -35,28 +36,21 @@
         <h2>Notes and Academic Writings</h2>
 
         <ul>
-            <li>Here is a link to my <a href="./mathblog/index.html">math blog</a>, where I write about random things</li>
+            <li>Here is a link to some shorter <a href="./mathblog/index.html">writings on math</a></li>
             <li>
                 Here is a list of notes I have written for school/talks/learning/fun:
                 <ul>
-                    <li><a href="./notes/pdf/derived.pdf">An introduction to derived functors</a></li>
+                    <li><a href="./notes/pdf/derived.pdf">Derived functors, derived categories, and cohomology</a></li>
                     <li><a href="./notes/pdf/soul_conjecture.pdf">Perelman's proof of the Soul Conjecture</a>, final project for MAT464 (Riemannian geometry) at the University of Toronto</li>
-                </ul>
-            </li>
-            <li>
-                Here are some solutions to exercises in various textbooks/other places:
-                <ul>
-                    <li><a href="./solutions/pdf/hartshorne.pdf"><i>Algebraic Geometry</i> by Hartshorne</a></li>
-                    <li><a href="#"><i>Introduction to Symplectic Topology</i> by McDuff and Salamon</a></li>
+                    <li><a href="./solutions/pdf/hartshorne.pdf">Some solutions to <i>Algebraic Geometry</i> by Hartshorne</a></li>
                 </ul>
             </li>
         </ul>
                 <h2>Miscellaneous</h2>
         <ul>
             <li> I sometimes write stuff online...read at your own peril. <a href="https://jackceroni.substack.com/">Dark Star (Substack)</a></li>
-                <li>I used to work at <a href="https://xanadu.ai">Xanadu</a>, as well as <a href="https://extropic.ai">Extropic</a>. 
-                Both companies are very cool and have done a lot for me. Check them out!</li>
                 <li>A few artists who inspire me: Edward Hopper, Björk, Wim Wenders, Jonathan Franzen</li>
+                <li><a href="./books.html">Here</a> is a list of books I have read recently</li>
         </ul>
     </body>
     <style>
@@ -64,7 +58,6 @@
          margin-left:20%;
          margin-right:20%;
          margin-top:30px;
-         background-color:#FDF7D6;
      }
     </style>
 </html>
