--- a/mathblog/index.html
+++ b/mathblog/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-25 Mon 09:07 -->
+<!-- 2026-01-11 Sun 08:31 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Math blog</title>
@@ -194,24 +194,23 @@
   .org-svg { }
 </style>
 <link rel="stylesheet" type="text/css" href="https://gongzhitaao.org/orgcss/org.css"/>
-<style> body {font-size:15px;background-color:#FDF7D6;} a {color:blue;} </style>
+<style> body {font-size:15px;} a {color:blue;} </style>
 </head>
 <body>
 <div id="content" class="content">
 <h1 class="title">Math blog</h1>
 <ul class="org-ul">
-<li>August | <a href="./ag_connection.html">The connection between varieties and schemes: part 1</a></li>
+<li>September 7th, 2025 | <a href="./fibre_integrals.html">Fibre integrals and the Thom isomorphism (unfinished)</a></li>
 <li>July 26th, 2025 | <a href="./imo_2025.html">Some solutions to problems from the 2025 IMO</a></li>
 <li>July 1st, 2025 | <a href="./leray_hirsch.html">Leray-Hirsch theorem</a></li>
 <li>June 11th, 2025 | <a href="./groupoid_svk.html">Seifert-Van Kampen for fundamental groupoids in painful detail</a></li>
-<li>May 14th, 2025 | <a href="./every_hartshorne_ex.html">Every exercise in the first three chapters of Hartshorne</a></li>
+<li>May 14th, 2025 | <a href="./every_hartshorne_ex.html">Every exercise in the first three chapters of Hartshorne (incomplete!)</a></li>
 <li>May 6th, 2025 | <a href="./myers_steenrod.html">A complete proof of the Myers-Steenrod theorem</a></li>
-<li>May 5th, 2025 | <a href="./fibre_integrals.html">Fibre integrals</a></li>
 </ul>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jack Ceroni</p>
-<p class="date">Created: 2025-08-25 Mon 09:07</p>
+<p class="date">Created: 2026-01-11 Sun 08:31</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
