--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
             <li> I sometimes write stuff online...read at your own peril. <a href="https://jackceroni.substack.com/">Dark Star (Substack)</a></li>
                 <li>A few artists who inspire me: Edward Hopper, Björk, Wim Wenders, Jonathan Franzen</li>
-                <li><a href="./books.html">Here</a> is a list of books I have read recently</li>
+                <li><a href="./Books.html">Here</a> is a list of books I have read recently</li>
         </ul>
     </body>
     <style>
