--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>
             I am a first-year PhD student at the University of Chicago. Prior to this, I was an 
             undergraduate student at the University of Toronto. I also worked as a research intern at <a href="https://xanadu.ai">Xanadu</a> and a 
-            research scientist at <a href="https:/extropic.ai">Extropic</a>. My current research interests are mostly related to 
+            research scientist at <a href="https://extropic.ai">Extropic</a>. My current research interests are mostly related to 
             geometric analysis and its interactions with topology. I am also interested in several more 
             applied fields, such as probability and mathematical methods for finance, quantum information, and quantum chemistry.
             <br>
@@ -38,11 +38,13 @@
         <ul>
             <li>Here is a link to some shorter <a href="./mathblog/index.html">writings on math</a></li>
             <li>
-                Here is a list of notes I have written for school/talks/learning/fun:
+                Here is a list of notes/solution sets I have written for school/talks/learning/fun:
                 <ul>
                     <li><a href="./notes/pdf/derived.pdf">Derived functors, derived categories, and cohomology</a></li>
                     <li><a href="./notes/pdf/soul_conjecture.pdf">Perelman's proof of the Soul Conjecture</a>, final project for MAT464 (Riemannian geometry) at the University of Toronto</li>
                     <li><a href="./solutions/pdf/hartshorne.pdf">Some solutions to <i>Algebraic Geometry</i> by Hartshorne</a></li>
+                    <li><a href="./solutions/pdf/petersen.pdf">Some solutions to Petersen and Lee's books on Riemannian geometry</a></li>
+                    <li><a href="./notes/pdf/prob_course.pdf">Problems and solutions in basic probability and stochastic calculus</a></li>
                 </ul>
             </li>
         </ul>
