--- a/mathblog/index.html
+++ b/mathblog/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2026-02-09 Mon 10:59 -->
+<!-- 2026-02-09 Mon 11:21 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Jack's blog</title>
@@ -194,7 +194,7 @@
   .org-svg { }
 </style>
 <link rel="stylesheet" type="text/css" href="https://gongzhitaao.org/orgcss/org.css"/>
-<style> body {font-size:15px;} a {color:blue;} </style>
+<style> body {font-size:15px;} a {color:blue;}</style>
 </head>
 <body>
 <div id="content" class="content">
@@ -203,14 +203,14 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgbc37472">1. 2026</a></li>
-<li><a href="#org219cfec">2. 2025</a></li>
+<li><a href="#orge24dca0">1. 2026</a></li>
+<li><a href="#org9b4e50d">2. 2025</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgbc37472" class="outline-2">
-<h2 id="orgbc37472"><span class="section-number-2">1.</span> 2026</h2>
+<div id="outline-container-orge24dca0" class="outline-2">
+<h2 id="orge24dca0"><span class="section-number-2">1.</span> 2026</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>February 9th, 2026 | <a href="./mcduff_salamon_1.html">A small note on a result in McDuff-Salamon</a></li>
@@ -219,8 +219,8 @@
 </div>
 </div>
 
-<div id="outline-container-org219cfec" class="outline-2">
-<h2 id="org219cfec"><span class="section-number-2">2.</span> 2025</h2>
+<div id="outline-container-org9b4e50d" class="outline-2">
+<h2 id="org9b4e50d"><span class="section-number-2">2.</span> 2025</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>September 7th, 2025 | <a href="./fibre_integrals.html">Fibre integrals and the Thom isomorphism <b>(unfinished)</b></a></li>
@@ -234,7 +234,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jack Ceroni</p>
-<p class="date">Created: 2026-02-09 Mon 10:59</p>
+<p class="date">Created: 2026-02-09 Mon 11:21</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
